--- a/VIENA_FINAL/VIENA_FINAL/index.html
+++ b/VIENA_FINAL/VIENA_FINAL/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image Slider</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="estilos/index.css">
 </head>
 <body>
 
@@ -116,6 +116,7 @@
 
 
 
+    <?php require 'footer.php'; ?>
 
 
     <script src="app.js"></script>
